--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,14 @@
   "editor.formatOnSave": true,
   "editor.formatOnType": true,
   "editor.snippetSuggestions": "top",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.options": {
+    "configFile": ".eslintrc.js"
+  },
   "eslint.enable": true,
+  "eslint.alwaysShowStatus": true,
   "eslint.packageManager": "npm",
   "files.encoding": "utf8",
   "javascript.format.enable": true,
