--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,4 +16,8 @@
   "javascript.format.enable": true,
   "prettier.endOfLine": "crlf",
   "workbench.iconTheme": "vscode-icons",
+  "cSpell.words": [
+    "mobx",
+    "uglifyjs"
+  ],
 }
